tests/typing/fail/array/composite_array_mismatch2.act
contract A

constructor()

creates

  uint[3][2][2] x := [ [ [0,0,0], [0,0,0] ], [ [0,0,0], [0,0,0] ] ]

transition f(bool[3][2] a)

storage

  x := [a, [ [0,0,0], [0,0,0] ] ]
